first crack at restifying meetings
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@291 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -36,7 +36,7 @@
     <% if @meeting.running? %>
 
     <div class="clear">
-      <%= meet_link_to "Stop Meeting", { :action => 'stop', :id => @meeting } if session[:owner] -%>
+      <%= meet_link_to "Stop Meeting", stop_meeting_url(@meeting), :method => :post if session[:owner] -%>
     </div>
     <script type="text/javascript">
     //not sure if this should go here or not
@@ -45,7 +45,7 @@
     now = new Date();
     MC.roll(cents_per_hour, now.getTime(), <%= @meeting.cost %>);
     </script>
-    <%= periodically_call_remote :url => { :action => "update_notes", :id => @meeting } %> 
+    <%= periodically_call_remote :url => update_notes_meeting_url(@meeting), :method => :get %> 
     <% else %>
     <script type="text/javascript"> 
     MC.set(<%= @meeting.cost %>);
