--- a/app/views/meeting/_notes.rhtml
+++ b/app/views/meeting/_notes.rhtml
@@ -5,7 +5,7 @@
       <% if not n.running? %>
           -- <%= number_to_currency(n.cost/100.to_f) %>
       <% else %>
-      for <%= distance_of_time_in_words(Time.now - n.created_at)%> (<%= link_to "that's not happening anymore", { :controller => 'note', :action => "stop", :id => n}%>)
+      for <%= distance_of_time_in_words(Time.now - n.created_at)%> (<%= link_to "that's not happening anymore", stop_meeting_note_url(@meeting, n)%>)
       <% end %>
       </li>
     <% end %>
