--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -42,7 +42,8 @@
     curamount=parseInt($("startcost").firstChild.nodeValue);
     cents_per_hour = <%= @meeting.cents_per_hour %>;
     now = new Date();
-    MC.roll(cents_per_hour, now.getTime(), <%= @meeting.cost %>);
+    MC.init(String(cents_per_hour), now.getTime(), 
+        String(<%= @meeting.cost %>));
     </script>
     <%= periodically_call_remote :url => update_notes_meeting_url(@meeting), :method => :get %> 
     <% else %>
