fix bug in track it
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@305 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -21,7 +21,7 @@
     <div id="notes"><%= render :partial => 'notes' %></div>
 
     <% if @meeting.running? %>
-    <div id="note_form">
+    <div id="note_form_wrapper">
     <% form_tag(meeting_notes_url(@meeting), :id => "note_form", :method => :post) do %>
     What is happening now?<br/>
       <%= text_field "note", "descr", :size => 20  %>
