add dollar sign to meeting display
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@306 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -3,11 +3,8 @@
 <div id="main_box">
   <div id="meeting_details">
     <h3>Current Cost</h3>
+    <span id="currency_sign">$</span>
     <div id="current_cost"> 
-      <div class="numeral" id="place6"></div>
-      <div class="decimal">,</div>
-      <div class="numeral" id="place5"></div>
-      <div class="numeral" id="place4"></div>
       <div class="numeral" id="place3"></div>
       <div class="decimal">.</div>
       <div class="numeral" id="place2"></div>
