fix link in signup
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@307 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/account/index.html.erb
+++ b/app/views/account/index.html.erb
@@ -1,4 +1,4 @@
 <h2>Welcome!</h2>
 <div id="main_box">
-  <p>Thank you for signing up.  Go ahead and <%= link_to "start a new meeting", :action => "create", :controller => "meeting" -%> now!</p>
+  <p>Thank you for signing up.  Go ahead and <%= link_to "start a new meeting", :action => "new", :controller => "meeting" -%> now!</p>
 </div>
