--- a/app/views/meeting/_costcalc.rhtml
+++ b/app/views/meeting/_costcalc.rhtml
@@ -14,7 +14,7 @@
       <fieldset>
         <legend>Number of people</legend>
         <div id='track1' class='slider'>
-          <div></div>
+          <div><%= image_tag("slider-handle.png")%></div>
         </div>
         <%= text_field :meeting, :attendance, :value => "1", :size => "20", :onkeyup => '$("costperhour").value = MC.calc()' %>
       </fieldset>
@@ -25,7 +25,7 @@
       <fieldset>
         <legend>Wages</legend>
         <div id='track2' class='slider'>
-          <div></div>
+          <div><%= image_tag("slider-handle.png")%></div>
         </div>
         <input type="text" id="salary" value="50000.00" size="20" onkeyup='$("costperhour").value = MC.calc()'/><br />
         <input type="radio" name="wage_type" id="wage_type_annual" value="annual" checked onChange='$("salary").value = MC.check_wage_type($("track2value").value)'/>annual
