--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -41,7 +41,7 @@
     MC.init(String(cents_per_hour), now.getTime(), 
         String(<%= @meeting.cost %>));
     </script>
-    <%= periodically_call_remote :url => update_notes_meeting_url(@meeting), :method => :get %> 
+    <%= periodically_call_remote :url => meeting_notes_url(@meeting), :method => :get %> 
     <% else %>
     <script type="text/javascript"> 
     MC.set(<%= @meeting.cost %>);
