--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -51,5 +51,5 @@
 
   <div id="alternative">What fun, it's a meeting!</div>
   <div class="clear_all">&nbsp;</div>
-  <%= periodically_call_remote :url => { :controller => :alt_widget, :action => :view, :meeting_id => @meeting.id, :frequency => 15 } %>
+  <%= periodically_call_remote :url => meeting_alt_widget_url(@meeting), :method => :get, :frequency => 15  %>
 </div>
