turn off autocomplete on meeting creation form
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@326 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/meeting/_costcalc.rhtml
+++ b/app/views/meeting/_costcalc.rhtml
@@ -2,7 +2,7 @@
 <%= error_messages_for 'meeting' %>
 <div id="main_box">
   <h3>Tell us about your meeting</h3>
-  <% form_for @meeting, :html => {:id => "costcalc"} do -%>
+  <% form_for @meeting, :html => {:id => "costcalc", :autocomplete => "off"} do -%>
   <div id="left_form">
     <div class="inputcontainer">
       <fieldset>
