bug 17 -- style welcome text
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@331 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -34,6 +34,7 @@ h3 {
   font-family: Verdana, sans-serif;
   color: #be5843;
   letter-spacing: 1px;
+  margin-bottom: 5px;
 }
 
 input {
@@ -46,6 +47,14 @@ input {
 
 a {
   color: #551f00;
+}
+
+p {
+  margin-right: 100px;
+  margin-top: 5px;
+  color: #551f00;
+  padding: 10px;
+  font-size: .9em;
 }
 
 fieldset {
