bug 17 rework welcome text
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@332 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/meeting/index.rhtml
+++ b/app/views/meeting/index.rhtml
@@ -1,9 +1,9 @@
 <h2>Welcome to Meetronome!</h2>
 <div id="main_box">
   <h3>Ever wonder how much an "All Hands" meeting costs?</h3>
-    <p>Meetronome will show you the cost of your meeting as you sit in it!</p>
-  <h3>Want to keep track of what goes on in a meeting?</h3>
-    <p>Meetronome keeps track of what's going on, and lets you share your notes with anyone else in the meeting.</p>
+    <p>Meetronome will show you the cost of your meetings as you sit in them!</p>
+  <h3>Can't remember what happened in a meeting?</h3>
+  <p>Meetronome keeps track of what's going on with it's unique collaborative note taking system.</p>
   <h3>Bored?</h3>
     <p>Meetronome is chock full of great tips and advice!</p>
   <h3>Get Started!</h3>
