--- a/app/views/meeting/show.html.erb
+++ b/app/views/meeting/show.html.erb
@@ -38,13 +38,15 @@
     curamount=parseInt($("startcost").firstChild.nodeValue);
     cents_per_hour = <%= @meeting.cents_per_hour %>;
     now = new Date();
-    MC.init(String(cents_per_hour), now.getTime(), 
+    MC.init(String(cents_per_hour));
+    MC.start(now.getTime(), 
         String(<%= @meeting.cost %>));
     </script>
     <%= periodically_call_remote :url => meeting_notes_url(@meeting), :method => :get %> 
     <% else %>
     <script type="text/javascript"> 
-    MC.set(<%= @meeting.cost %>);
+    MC.init(1);
+    MC.set(<%= @meeting.cost %>, 0);
     </script>
     <% end %>
   </div>
