link header to root
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@344 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -80,6 +80,10 @@ ul.horizontal li {
   font-size: .9em;
 }
 
+#header a img {
+  border: 0px;
+}
+
 #content {
   background-image: url(/images/middle.png);
   background-repeat: repeat-y;
