--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -84,6 +84,10 @@ ul.horizontal li {
   border: 0px;
 }
 
+#header a {
+  outline: none; /* hide dotted outline in Firefox */
+}
+
 #content {
   background-image: url(/images/middle.png);
   background-repeat: repeat-y;
