refactor to handle my meetings, update annotate models
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@349 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/welcome/index.rhtml
+++ b/app/views/welcome/index.rhtml
@@ -2,9 +2,13 @@
 <div id="main_box">
   <h3>Get Started!</h3>
   <ul class="horizontal">
-    <li><%= link_to "Signup", {:controller => 'account', :action => 'login'} %></li>
-    <li>::</li>
-    <li><%= link_to "Login", {:controller => 'account', :action => 'signup'}%></li>
+    <% if logged_in? -%>
+      <li><%= link_to "My Meetings", meetings_url %></li>
+    <% else -%>
+      <li><%= link_to "Signup", {:controller => 'account', :action => 'login'} %></li>
+      <li>::</li>
+      <li><%= link_to "Login", {:controller => 'account', :action => 'signup'}%></li>
+    <% end -%>
     <li>::</li>
     <li><%= link_to "Start a meeting", new_meeting_url %></li>
   </ul>
