--- a/app/views/welcome/index.rhtml
+++ b/app/views/welcome/index.rhtml
@@ -3,7 +3,7 @@
   <h3>Get Started!</h3>
   <ul class="horizontal">
     <% if logged_in? -%>
-      <li><%= link_to "My Meetings", meetings_url %></li>
+      <li><%= link_to "Past Meetings", meetings_url %></li>
     <% else -%>
       <li><%= link_to "Signup", {:controller => 'account', :action => 'login'} %></li>
       <li>::</li>
