Centering the layout.
git-svn-id: https://jsv.mine.nu/svn/repos/mc/trunk@357 0889de32-30e5-0310-ab80-ca79f5f4c722

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,8 @@
     </div>
     <%= yield :layout %>
   </div> 
-  <div>
+  <div id="footer">
     <div><%= image_tag("footer.png") %></div>
-    <div id="footer">Meetronome is brought to you by Paul Damer and Josh Vickery</div>
+    <div id="footer_text">Meetronome is brought to you by Paul Damer and Josh Vickery</div>
   </div>
 </body>
