--- a/app/views/meeting/new.html.erb
+++ b/app/views/meeting/new.html.erb
@@ -43,8 +43,10 @@
     <%= slider_element 'track2', :minimum => 10000, :maximum => 500000,  :increment => 3, :values => (2..100).inject([]){|a,i|a << i*5000}.inspect, :slide => '$("track2value").value = value; $("salary").value = MC.check_wage_type(value); $("costperhour").value = MC.calc()', :range => 10000..500000, :sliderValue => 50000 %>
     <%= javascript_tag("observeSliderTextField($('salary'),track2, true)") %>
   </div>
-  <div id="form_buttons" class="clear">
+  <div id="form_buttons">
+    <div class="clear">
     <%= meet_link_to_function "Start Meeting", "$('meeting_cents_per_hour').value = $('costperhour').value * 100;$('costcalc').submit(0)"  -%>
+  </div>
   </div>
   <% end -%>
 </div>
