--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
   <title>Meetronome<%= yield :title %></title>
   <%= stylesheet_link_tag("application") %>
-  <%= javascript_include_tag(:defaults) %>
+  <%= javascript_include_tag :defaults, :cache => "cache/all"%>
   <link rel="shortcut icon" href="/images//favicon.ico" type="image/vnd.microsoft.icon"/>
   <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon"/> 
   <%= yield :head %>
